2008-06-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36474
	* gcc.dg/tree-ssa/alias-15.c: Adjust testcase.

2008-06-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/pack3.ads: New test.
	* gnat.dg/specs/pack3_pkg.ads: New helper.

2008-06-07  Sebastian Pop  <sebastian.pop@amd.com>

	* testsuite/gcc.dg/tree-ssa/ltrans-8.c: Fix outer loop strides
	to be large enough to not be in L1 cache.

2008-06-07  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-05-12  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/36111
	* gcc.dg/pr36111.c: New test.
	
2008-06-06  Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_powerpc_spu):
	Call check_effective_target_powerpc_altivec_ok.
	* gcc.target/powerpc/dfp-dd.c, gcc.target/powerpc/dfp-td.c,
	gcc.target/powerpc/ppc32-abi-dfp-1.c,
	gcc.target/powerpc/ppu-intrinsics.c: Require powerpc_fprs.

2008-06-06  Jakub Jelinek  <jakub@redhat.com>

	PR target/36362
	* gcc.c-torture/execute/20080529-1.c: New test.

2008-06-06  Release Manager

	* GCC 4.3.1 released.

2008-05-29  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.dg/nested-func-6.c: New test.

2008-05-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36300
	* gcc.dg/pr36300-1.c: New testcase.
	* gcc.dg/pr36300-2.c: Likewise.

2008-05-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36339
	* gcc.c-torture/execute/pr36339.c: New testcase.
	* gcc.dg/tree-ssa/loadpre8.c: XFAIL.

2008-05-27  Alexandre Oliva  <aoliva@redhat.com>

	PR c++/35909
	* g++.dg/conversion/bitfield9.C: New.

2008-05-26  Kai Tietz  <kai.tietz@onevision.com>

	PR target/36321
	* gcc-c.torture/execute/pr36321.c: New.

2008-05-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36237
	* g++.dg/gomp/pr36237.C: New test.

2008-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR c++/36023
	* g++.dg/ext/complit10.C: New test.

2008-05-21  Sebastian Pop  <sebastian.pop@amd.com>
	    Jan Sjodin  <jan.sjodin@amd.com>
